--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
   },
   "homepage": "https://github.com/samuelchristopher/learning-angular2#readme",
   "devDependencies": {
+    "browserify": "^12.0.1",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
-    "gulp-typescript": "^2.9.2"
+    "gulp-typescript": "^2.9.2",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "angular2": "^2.0.0-alpha.46",
+    "reflect-metadata": "^0.1.2"
   }
 }
